<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/signuplabel"
        android:id="@+id/imageView16" />

    <EditText
        android:id="@+id/editText_register_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login_input_user_name"
        android:layout_marginTop="90dp">
    </EditText>

    <EditText
        android:id="@+id/editText_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_register_userName"
        android:layout_below="@+id/editText_register_userName"
        android:ems="10"
        android:hint="@string/register_input_user_email"
        android:inputType="textEmailAddress" >
    </EditText>

    <EditText
        android:id="@+id/editText_register_userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_register_email"
        android:layout_below="@+id/editText_register_email"
        android:ems="10"
        android:hint="@string/login_input_user_password"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/editText_register_userPassword_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_register_userPassword"
        android:layout_below="@+id/editText_register_userPassword"
        android:ems="10"
        android:hint="@string/register_input_user_password_again"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/button_i_need_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_register_userPassword_again"
        android:textColor="@color/whiteColor"
        android:background="@color/ggColor"
        android:layout_below="@+id/editText_register_userPassword_again"
        android:text="@string/login_button_register"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="14dp"
        android:id="@+id/imageView21"
        android:background="@drawable/loginor_seperator"
        android:layout_above="@+id/linearLayout5"
        android:layout_alignEnd="@+id/imageView16"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/whiteColor"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout5"
        android:layout_marginBottom="20dp">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/thirdparty_facebook"
            android:id="@+id/register_facebook"
            android:layout_marginLeft="70dp" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/register_twitter"
            android:layout_marginLeft="20dp"
            android:background="@drawable/thirdparty_twitter" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/thirdparty_weibo"
            android:id="@+id/register_wechat"
            android:layout_marginLeft="20dp" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/thirdparty_wechat"
            android:id="@+id/register_weibo"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="20dp" />
    </LinearLayout>

</RelativeLayout>